Updated website description

--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ url: "https://josephcrispell.github.io"
 # THEME-SPECIFIC CONFIGURATION
 title: Joseph Crispell
 user_title: Data Scientist
-user_description: Programmer interested in all types of data and analyses
-description: "Blog about things that interest me"
+user_description: Data scientist doing and promoting reproducible data science
+description: "Interests of a data scientist"
 avatar: assets/img/WebsiteLogo.png
 favicon: assets/img/WebsiteLogo.png  
 
